--- a/download.plist
+++ b/download.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://iostesting168.netlify.app/s.ipa</string>
+<string>https://pozz-seang.github.io/WebTestBySEHacker/s.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
@@ -19,7 +19,7 @@
 <key>needs-shine</key>
 <true/>
 <key>url</key>
-<string>https://iostesting168.netlify.app/s_logo_bg.png</string>
+<string>https://pozz-seang.github.io/WebTestBySEHacker/s_logo_bg.png</string>
 </dict>
 </array>
 <key>metadata</key>
@@ -31,7 +31,7 @@
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>Scarlet - SE</string>
+<string>SE</string>
 </dict>
 </dict>
 </array>
